fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,7 @@
   font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
 }
+
+body {
+  overflow-x: hidden;
+}
